feat: 集成AI图片生成功能和模板保存功能
✨ 新功能:
- 集成火山引擎AI图片生成服务
- 添加AI图片生成对话框和右键菜单
- 在图片样式面板添加AI替换图片按钮
- 实现当前页面保存为模板功能
- 添加后端API服务支持图片生成和模板保存

🔧 技术改进:
- 创建独立的Express后端服务(server/)
- 集成火山引擎视觉服务SDK
- 实现真实的AI图片生成API调用
- 优化用户体验：生成成功后自动关闭对话框
- 统一模板数据格式，与导出JSON格式保持一致

🛠️ 修复和优化:
- 修复message.loading错误，改用message.info
- 添加完善的错误处理和用户提示
- 更新.gitignore忽略环境变量文件
- 添加emitter事件系统支持组件间通信

📁 文件变更:
- 新增: server/ (后端服务)
- 新增: src/views/Editor/AIImageDialog.vue
- 更新: src/hooks/useAIImage.ts
- 更新: src/services/index.ts
- 更新: src/utils/emitter.ts
- 更新: 多个组件文件支持AI功能

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,16 @@ coverage
 *.sw?
 
 *.tsbuildinfo
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+.env.*.local
+server/.env
+server/.env.local
+server/.env.development
+server/.env.production
+server/.env.test
