--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,6 @@ PORT=3001
 OPENAI_API_KEY=your_openai_api_key_here
 STABILITY_API_KEY=your_stability_api_key_here
 
+# 火山引擎配置
+VOLC_AK='AKLTMWQzYTdkYjJmY2RlNGMzNmE1NWRjNmQyNmQ0NmViMzg'
+VOLC_SK='TURFd1lqWXpaamxoTldObE5EQXpZMkpsTjJRM01qYzNOalEyTkRSaE5EZw=='
