feat: 添加AI数据同步功能和界面优化
- 新增 useAIDataSync.ts hook 用于AI数据同步
- 更新 package.json 和 package-lock.json 依赖
- 优化 App.vue 主应用组件
- 改进 Slider 组件功能
- 增强 useAIImage hook 的AI图像处理能力
- 优化 Canvas 画布组件
- 改进服务器导出对话框功能
- 优化表格元素和文本元素组件

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hfmath": "^0.0.2",
     "html-to-image": "^1.11.11",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "nanoid": "^5.0.7",
     "number-precision": "^1.6.0",
